--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "android": "0.0.8",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-elements": "^3.4.2"
+    "react-native-elements": "^3.4.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
