--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "android": "0.0.8",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "^4.1.0",
+    "react-native-screens": "^3.13.0",
+    "react-navigation": "^4.4.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
