--- a/package.json
+++ b/package.json
@@ -1,40 +1,52 @@
 {
-  "name": "traning",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.5.0",
-    "android": "0.0.8",
-    "formik": "^2.2.9",
-    "react": "17.0.2",
-    "react-native": "0.67.3",
-    "react-native-elements": "^3.4.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "^4.1.0",
-    "react-native-screens": "^3.13.0",
-    "react-navigation": "^4.4.4",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+    "name": "traning",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "start": "react-native start",
+        "test": "jest",
+        "lint": "eslint .",
+        "adb": "adb kill-server && adb devices && adb reverse tcp:8081 tcp:8081"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.17.0",
+        "@react-navigation/bottom-tabs": "^6.2.0",
+        "@react-navigation/native": "^6.0.8",
+        "@react-navigation/native-stack": "^6.5.0",
+        "@reduxjs/toolkit": "^1.8.0",
+        "android": "0.0.8",
+        "axios": "^0.26.1",
+        "formik": "^2.2.9",
+        "lottie-ios": "3.2.3",
+        "lottie-react-native": "^5.0.1",
+        "query-string": "^7.1.1",
+        "react": "17.0.2",
+        "react-native": "0.67.3",
+        "react-native-animated-loader": "^0.0.9",
+        "react-native-elements": "^3.4.2",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-safe-area-context": "^4.1.0",
+        "react-native-screens": "^3.13.0",
+        "react-navigation": "^4.4.4",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.1",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@babel/runtime": "^7.12.5",
+        "@react-native-community/eslint-config": "^2.0.0",
+        "babel-jest": "^26.6.3",
+        "eslint": "7.14.0",
+        "jest": "^26.6.3",
+        "metro-react-native-babel-preset": "^0.66.2",
+        "react-test-renderer": "17.0.2"
+    },
+    "jest": {
+        "preset": "react-native"
+    }
 }
